# close-to-gl

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
enc_temp_folder/ac74edcb41d1c1b4c64ce185248942d5/: ImGuiWrapper.cpp
lib/: LoadShaders.cpp
lib/glfw/include/GLFW/: glfw3native.h
src/: main.cpp  main.hpp
src/data/: Material.cpp  Model.cpp  Triangle.cpp  Vertex.cpp  data.hpp
src/gui/: Application.cpp  Application.hpp  Command.cpp  ImGuiWrapper.cpp  Window.cpp  Window.hpp  gui.hpp
src/services/: Config.cpp  Debug.cpp  ModelFactory.cpp  ModelToVertex.cpp  ProjectionFromConfig.cpp  TextureProvider.cpp  services.hpp
src/services/camera/: Camera.cpp  camera.hpp
src/services/render/: BackgroundProcessor.cpp  CameraResetProcessor.cpp  LightProcessor.cpp  OpenGLRenderer.cpp  ProjectionFromConfig.cpp  RenderModeProcessor.cpp  render.hpp
src/services/render/close-to-gl/: ClippingJob.cpp  CloseToGLPipeline.cpp  CloseToGLRenderer.cpp  CullingJob.cpp  FaceCulling.cpp  IlluminationModel.cpp  ModelToVertex.cpp  PerspectiveAndViewport.cpp  PerspectiveDivideJob.cpp  RasterJob.cpp  VertexShader.cpp  VertexShaderJob.cpp  ViewportTransformJob.cpp  ViewportTransformationJob.cpp  close.hpp
src/services/render/close-to-gl/illumination/: IlluminationModel.cpp  illumination.h
src/services/render/close-to-gl/raster/: RasterJob.cpp  Rasterizer.cpp  RgbBuffer.cpp  Scanner.cpp  Slope.cpp  raster.h
src/services/render/close-to-gl/raster/filter/: BilinearResampling.cpp  MipmapPyramidProvider.cpp  MipmapResampling.cpp  NearestNeighborResampling.cpp  NoTexture.cpp  filter.h
src/services/render/open-gl/: FilteringProcessor.cpp  LightProcessor.cpp  ModelToVertex.cpp  OpenGLRenderer.cpp  RenderModeProcessor.cpp  open.hpp
test/: CMakeLists.txt  ModelFactoryTest.cpp
